docs/errors/examples/file-not-found/file-not-found.grob
// E5301 — reading a file that does not exist on disk
const settings := fs.read(`C:\config\settings.json`)

print(settings)
